--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,6 @@
-pandas
-requests
-yfinance
-ta
-supabase
-selenium
-python-dotenv
-flask
-gunicorn
-python-dotenv
-python-binance
-Flask
-websocket-client
-requests
-python-dotenv
-ujson
-supabase
+Flask==3.0.3
+websocket-client==1.8.0
+requests==2.32.3
+python-dotenv==1.0.1
+supabase==2.5.0
+ujson==5.10.0
