--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-Flask==3.0.3
-websocket-client==1.8.0
-requests==2.32.3
-python-dotenv==1.0.1
-supabase==2.5.0
-ujson==5.10.0
+pandas
+flask
+requests
+sqlalchemy
+psycopg2-binary
+python-dotenv
+plotly
