--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-Flask==3.0.3
-python-dotenv==1.0.1
-requests==2.32.3
-supabase==2.5.0
-pandas==2.2.3
-ujson==5.10.0
-psycopg2-binary==2.9.7
-gunicorn==23.0.0
+flask
+pandas
+requests
+python-dotenv
+supabase
+psycopg2-binary
+sqlalchemy
