--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
-flask
-pandas
-requests
-python-dotenv
-supabase
-psycopg2-binary
-sqlalchemy
+Flask==2.3.2
+requests==2.32.0
+pandas==2.1.1
+supabase==3.8.3
