--- a/render.yaml
+++ b/render.yaml
@@ -2,11 +2,6 @@ services:
   - type: web
     name: daytrade-monitor
     env: python
-    pythonVersion: "3.12.17"
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: "python run_server.py"
-    envVars:
-      - key: FLASK_ENV
-        value: production
-      - key: PORT
-        value: "10000"
+    buildCommand: pip install --no-cache-dir -r requirements.txt
+    startCommand: python run_server.py
+    runtime: python-3.12.17
