--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 flask==2.2.5
 requests==2.32.5
-pandas==2.1.1
 numpy==1.27.5
 supabase==2.1.1
 python-dotenv==1.0.0
+flask==2.2.5
+requests==2.32.5
+pandas==2.1.3
+numpy==1.27.5
+cython==0.29.39
