--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,8 @@
 services:
   - type: web
     name: daytrade-monitor
-    env: python
-    buildCommand: pip install --no-cache-dir -r requirements.txt
-    startCommand: python run_server.py
-    runtime: python-3.12.17
+    env: docker
+    plan: starter
+    dockerfilePath: ./Dockerfile
+    autoDeploy: true
+    pullRequestPreviewsEnabled: false
