--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-flask==2.2.5
+flask==2.3.3
 requests==2.32.5
-supabase==2.1.1
+supabase==2.2.3
 python-dotenv==1.0.0
-flask==2.2.5
-requests==2.32.5
-pandas==2.1.3
-numpy==1.27.5
-cython==0.29.39
-numpy==1.26.4
+pandas==2.2.1
+numpy==2.0.3
+matplotlib==3.8.1
+scipy==1.12.1
+cython==0.30.3
