--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
-flask==2.3.3
+Flask==2.3.3
 requests==2.32.5
-supabase==2.2.3
+supabase==2.4.6
 python-dotenv==1.0.0
-pandas==2.2.1
-numpy==2.0.3
-matplotlib==3.8.1
-scipy==1.12.1
-cython==0.30.3
+pandas==2.1.3
+numpy==2.3.4
