--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-Flask==2.3.3
+flask==2.3.3
 requests==2.32.3
-yfinance==0.2.48
-pandas==2.2.3
-python-dotenv==1.0.0
+yfinance==0.2.43
+gunicorn==22.0.0
