--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-Flask==3.0.3
+Flask==2.3.3
 requests==2.32.3
-pandas==2.2.3
-gunicorn==23.0.0
+pandas==2.3.3
+numpy==2.3.4
+plotly==5.22.0
+python-dotenv==1.0.1
 
 
 flask
