--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,12 @@ pandas==2.3.3
 numpy==2.3.4
 plotly==5.22.0
 python-dotenv==1.0.1
+git+https://github.com/twelve-data/twelve-data-python.git
 
 Flask
 pandas
 plotly
-twelve_data
+
 requests
 
 flask
