--- a/.env
+++ b/.env
@@ -1,5 +1,3 @@
+
+# Copie para .env ou configure no Render como TWELVE_API_KEY
 TWELVE_API_KEY=34b1f0bac586484c97725bbbbddad099
-DEBUG=1
-UPDATE_INTERVAL_SECONDS=60
-TIMEFRAME_MINUTES=15
-PORT=5000
